# duckdb-snowflake

./: .gitignore  AUTHENTICATION_STATUS.md  AUTH_TESTING_SUMMARY.txt  BUILD.md  CMakeLists.txt  FINAL_TEST_SUITE_SUMMARY.md  FUNCTION_NAME_CHANGE_SUMMARY.md  GITHUB_PR_DESCRIPTION.md  IMPLEMENTATION_SUMMARY.md  Makefile  OIDC_AUTHENTICATION_GUIDE.md  OIDC_IMPLEMENTATION_SUMMARY.md  PREDICATE_PUSHDOWN.md  PREDICATE_PUSHDOWN_DEMO.md  PUSHDOWN_OVERVIEW.md  PUSHDOWN_TEST_SUMMARY.md  QUERY_HISTORY_VERIFICATION_APPROACH.md  QUICK_SETUP.md  README.md  SAML2_SETUP_GUIDE.md  SETUP_GITHUB_REPO.md  SNOWFLAKE_SUPPORT_NOTES.md  example_oidc_config.json  filter_pushdown_profile.json  get_real_oidc_token.py  hybrid_queries_profile.json  my_local_tests.sql  oidc_config_template.sql  oidc_demo.sql  oidc_quick_test.sql  pkce_helper.py  profile_output.json  pushdown_disabled_profile.json  pushdown_enabled_profile.json  run_performance_tests.sh  setup-github-repo.sh  setup-private-repo.sh  snowflake_oidc_setup.sql  temp_private_key.pem  temp_public_key.pub  (+8 more)
.github/workflows/: MainDistributionPipeline.yml  snowflake-sql-tests.yml  snowflake-tests.yml  test-with-snowflake.yml
docs/: AUTHENTICATION.md  AUTHENTICATION_SETUP.md
scripts/: download_adbc_driver.bat  download_adbc_driver.sh  install-adbc-driver.bat  install-adbc-driver.sh  package_extension_with_driver.py  test_all_auth_methods.sh  test_snowflake.sh
src/: snowflake_arrow_utils.cpp  snowflake_client.cpp  snowflake_client_manager.cpp  snowflake_config.cpp  snowflake_extension.cpp  snowflake_optimizer_extension.cpp  snowflake_query_builder.cpp  snowflake_scan.cpp  snowflake_secret_provider.cpp  snowflake_secrets.cpp  snowflake_transaction.cpp  snowflake_types.cpp
src/auth/: flow.cpp  flow.hpp  oidc_token_acquisition.cpp  oidc_token_acquisition.hpp  pkce.cpp  pkce.hpp
src/include/: snowflake_arrow_utils.hpp  snowflake_client.hpp  snowflake_client_manager.hpp  snowflake_config.hpp  snowflake_debug.hpp  snowflake_extension.hpp  snowflake_optimizer_extension.hpp  snowflake_options.hpp  snowflake_query_builder.hpp  snowflake_scan.hpp  snowflake_secret_provider.hpp  snowflake_secrets.hpp  snowflake_transaction.hpp
src/include/storage/: snowflake_catalog.hpp  snowflake_catalog_set.hpp  snowflake_schema_entry.hpp  snowflake_schema_set.hpp  snowflake_storage.hpp  snowflake_table_entry.hpp  snowflake_table_set.hpp
src/storage/: snowflake_catalog.cpp  snowflake_catalog_set.cpp  snowflake_schema_entry.cpp  snowflake_schema_set.cpp  snowflake_storage.cpp  snowflake_table_entry.cpp  snowflake_table_set.cpp
test/: Makefile  README.md  test_authentication_template.sql  test_snowflake_pushdown_unit.cpp
test/auth/: flow_test.cpp  pkce_standalone_test  pkce_standalone_test.cpp  pkce_test.cpp
test/sql/: snowflake.test  snowflake_all_auth_methods.test  snowflake_attach_functionality.test  snowflake_basic_connectivity.test  snowflake_data_types.test  snowflake_error_handling.test  snowflake_performance.test  snowflake_pushdown_behavior.test  snowflake_pushdown_proof.test  snowflake_read_operations.test
test/sql/pushdown/: filter_pushdown.test  hybrid_queries.test  pushdown_behavior.test  pushdown_disabled.test  query_builder.test
